[gd_scene load_steps=6 format=4 uid="uid://b18e8xpu1xg1g"]

[ext_resource type="Texture2D" uid="uid://gpufj5wv3tf3" path="res://assets/Tiles/marble.png" id="1_3lefc"]
[ext_resource type="PackedScene" uid="uid://cvlhi5bunpi4d" path="res://scenes/actors/PortalBoss.tscn" id="1_h1cn2"]
[ext_resource type="Script" uid="uid://0hgdu3v8flss" path="res://scripts/Levels/final.gd" id="1_lm5nn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lm5nn"]
texture = ExtResource("1_3lefc")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_jqpx0"]
tile_size = Vector2i(18, 18)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_lm5nn")

[node name="Final" type="Node2D"]
script = ExtResource("1_lm5nn")

[node name="pSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://bxpry3684affg")
spawn_path = NodePath("../Players")

[node name="PlayerMarkers" type="Node2D" parent="."]

[node name="Player1Marker" type="Marker2D" parent="PlayerMarkers"]
position = Vector2(173, 190)

[node name="Player2Marker" type="Marker2D" parent="PlayerMarkers"]
position = Vector2(296, 188)

[node name="Players" type="Node2D" parent="."]

[node name="Marble" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAACYAAAAGAAcAAAAAACUAAAAGAAcAAAAAACQAAAAGAAcAAAAAACMAAAAGAAcAAAAAACIAAAAGAAcAAAAAACEAAAAGAAcAAAAAACAAAAAGAAcAAAAAAB8AAAAGAAcAAAAAAB4AAAAGAAcAAAAAAB0AAAAGAAcAAAAAABwAAAAGAAcAAAAAABsAAAAGAAcAAAAAABoAAAAGAAcAAAAAABkAAAAGAAcAAAAAABgAAAAGAAcAAAAAABcAAAAGAAcAAAAAABYAAAAGAAcAAAAAABUAAAAGAAcAAAAAABQAAAAGAAcAAAAAABMAAAAGAAcAAAAAABIAAAAGAAcAAAAAABEAAAAGAAcAAAAAABAAAAAGAAcAAAAAAA8AAAAGAAcAAAAAAA4AAAAGAAcAAAAAAA0AAAAGAAcAAAAAAAwAAAAGAAcAAAAAAAsAAAAGAAcAAAAAAAoAAAAGAAcAAAAAAAkAAAAGAAcAAAAAAAgAAAAGAAcAAAAAAAcAAAAGAAcAAAAAAAYAAAAGAAcAAAAAAAUAAAAGAAcAAAAAAAQAAAAGAAcAAAAAAAMAAAAGAAcAAAAAAAIAAAAGAAcAAAAAAAEAAAAGAAcAAAAAAAAAAAAGAAYAAAAAACcAAAAGAAgAAABGAAAAAAAIAAYAAAArACcAAAAHAAgAAAAqACcAAAAHAAgAAAApACcAAAAHAAgAAAAoACcAAAAHAAgAAAAnACcAAAAHAAgAAAAmACcAAAAHAAgAAAAlACcAAAAHAAgAAAAkACcAAAAHAAgAAAAjACcAAAAHAAgAAAAiACcAAAAHAAgAAAAhACcAAAAHAAgAAAAgACcAAAAHAAgAAAAfACcAAAAHAAgAAAAeACcAAAAHAAgAAAAdACcAAAAHAAgAAAAcACcAAAAHAAgAAAAbACcAAAAHAAgAAAAaACcAAAAHAAgAAAAZACcAAAAHAAgAAAAYACcAAAAHAAgAAAAXACcAAAAHAAgAAAAWACcAAAAHAAgAAAAVACcAAAAHAAgAAAAUACcAAAAHAAgAAAATACcAAAAHAAgAAAASACcAAAAHAAgAAAARACcAAAAHAAgAAAAQACcAAAAHAAgAAAAPACcAAAAHAAgAAAAOACcAAAAHAAgAAAANACcAAAAHAAgAAAAMACcAAAAHAAgAAAALACcAAAAHAAgAAAAKACcAAAAHAAgAAAAJACcAAAAHAAgAAAAIACcAAAAHAAgAAAAHACcAAAAHAAgAAAAGACcAAAAHAAgAAAAFACcAAAAHAAgAAAAEACcAAAAHAAgAAAADACcAAAAHAAgAAAACACcAAAAHAAgAAAABACcAAAAHAAgAAABGAAwAAAAIAAcAAABGAAsAAAAIAAcAAABGAAoAAAAIAAcAAABGAAkAAAAIAAcAAABGAAgAAAAIAAcAAABGAAcAAAAIAAcAAABGAAYAAAAIAAcAAABGAAUAAAAIAAcAAABGAAQAAAAIAAcAAABGAAMAAAAIAAcAAABGAAIAAAAIAAcAAABGAAEAAAAIAAcAAAABAAAAAAAHAAYAAAACAAAAAAAHAAYAAAADAAAAAAAHAAYAAAAEAAAAAAAHAAYAAAAFAAAAAAAHAAYAAAAGAAAAAAAHAAYAAAAHAAAAAAAHAAYAAAAIAAAAAAAHAAYAAAAJAAAAAAAHAAYAAAAKAAAAAAAHAAYAAAALAAAAAAAHAAYAAAAMAAAAAAAHAAYAAAANAAAAAAAHAAYAAAAOAAAAAAAHAAYAAAAPAAAAAAAHAAYAAAAQAAAAAAAHAAYAAAARAAAAAAAHAAYAAAASAAAAAAAHAAYAAAATAAAAAAAHAAYAAAAUAAAAAAAHAAYAAAAVAAAAAAAHAAYAAAAWAAAAAAAHAAYAAAAXAAAAAAAHAAYAAAAYAAAAAAAHAAYAAAAZAAAAAAAHAAYAAAAaAAAAAAAHAAYAAAAbAAAAAAAHAAYAAAAcAAAAAAAHAAYAAAAdAAAAAAAHAAYAAAAeAAAAAAAHAAYAAAAfAAAAAAAHAAYAAAAgAAAAAAAHAAYAAAAhAAAAAAAHAAYAAAAiAAAAAAAHAAYAAAAjAAAAAAAHAAYAAAAkAAAAAAAHAAYAAAAlAAAAAAAHAAYAAAAmAAAAAAAHAAYAAAAnAAAAAAAHAAYAAAAoAAAAAAAHAAYAAAApAAAAAAAHAAYAAAAqAAAAAAAHAAYAAAArAAAAAAAHAAYAAAAsAAAAAAAHAAYAAAAtAAAAAAAHAAYAAAAuAAAAAAAHAAYAAAAvAAAAAAAHAAYAAAAwAAAAAAAHAAYAAAAxAAAAAAAHAAYAAAAyAAAAAAAHAAYAAAAzAAAAAAAHAAYAAAA0AAAAAAAHAAYAAAA1AAAAAAAHAAYAAAA2AAAAAAAHAAYAAAA3AAAAAAAHAAYAAAA4AAAAAAAHAAYAAAA5AAAAAAAHAAYAAAA6AAAAAAAHAAYAAAA7AAAAAAAHAAYAAAA8AAAAAAAHAAYAAAA9AAAAAAAHAAYAAAA+AAAAAAAHAAYAAAA/AAAAAAAHAAYAAABAAAAAAAAHAAYAAABBAAAAAAAHAAYAAABCAAAAAAAHAAYAAABDAAAAAAAHAAYAAABEAAAAAAAHAAYAAABFAAAAAAAHAAYAAAA=")
tile_set = SubResource("TileSet_jqpx0")

[node name="Marble2" type="TileMapLayer" parent="."]
position = Vector2(1276, 718)
tile_map_data = PackedByteArray("AAAAACYAAAAGAAcAAAAAACUAAAAGAAcAAAAAACQAAAAGAAcAAAAAACMAAAAGAAcAAAAAACIAAAAGAAcAAAAAACEAAAAGAAcAAAAAACAAAAAGAAcAAAAAAB8AAAAGAAcAAAAAAB4AAAAGAAcAAAAAAB0AAAAGAAcAAAAAABwAAAAGAAcAAAAAABsAAAAGAAcAAAAAACcAAAAGAAgAAABGAAAAAAAIAAYAAABGACcAAAAIAAgAAABFACcAAAAHAAgAAABEACcAAAAHAAgAAABDACcAAAAHAAgAAABCACcAAAAHAAgAAABBACcAAAAHAAgAAABAACcAAAAHAAgAAAA/ACcAAAAHAAgAAAA+ACcAAAAHAAgAAAA9ACcAAAAHAAgAAAA8ACcAAAAHAAgAAAA7ACcAAAAHAAgAAAA6ACcAAAAHAAgAAAA5ACcAAAAHAAgAAAA4ACcAAAAHAAgAAAA3ACcAAAAHAAgAAAA2ACcAAAAHAAgAAAA1ACcAAAAHAAgAAAA0ACcAAAAHAAgAAAAzACcAAAAHAAgAAAAyACcAAAAHAAgAAAAxACcAAAAHAAgAAAAwACcAAAAHAAgAAAAvACcAAAAHAAgAAAAuACcAAAAHAAgAAAAtACcAAAAHAAgAAAAsACcAAAAHAAgAAAArACcAAAAHAAgAAAAqACcAAAAHAAgAAAApACcAAAAHAAgAAAAoACcAAAAHAAgAAAAnACcAAAAHAAgAAAAmACcAAAAHAAgAAAAlACcAAAAHAAgAAAAkACcAAAAHAAgAAAAjACcAAAAHAAgAAAAiACcAAAAHAAgAAAAhACcAAAAHAAgAAAAgACcAAAAHAAgAAAAfACcAAAAHAAgAAAAeACcAAAAHAAgAAAAdACcAAAAHAAgAAAAcACcAAAAHAAgAAAAbACcAAAAHAAgAAAAaACcAAAAHAAgAAAAZACcAAAAHAAgAAAAYACcAAAAHAAgAAAAXACcAAAAHAAgAAAAWACcAAAAHAAgAAAAVACcAAAAHAAgAAAAUACcAAAAHAAgAAAATACcAAAAHAAgAAAASACcAAAAHAAgAAAARACcAAAAHAAgAAAAQACcAAAAHAAgAAAAPACcAAAAHAAgAAAAOACcAAAAHAAgAAAANACcAAAAHAAgAAAAMACcAAAAHAAgAAAALACcAAAAHAAgAAAAKACcAAAAHAAgAAAAJACcAAAAHAAgAAAAIACcAAAAHAAgAAAAHACcAAAAHAAgAAAAGACcAAAAHAAgAAAAFACcAAAAHAAgAAAAEACcAAAAHAAgAAAADACcAAAAHAAgAAAACACcAAAAHAAgAAAABACcAAAAHAAgAAABGACYAAAAIAAcAAABGACUAAAAIAAcAAABGACQAAAAIAAcAAABGACMAAAAIAAcAAABGACIAAAAIAAcAAABGACEAAAAIAAcAAABGACAAAAAIAAcAAABGAB8AAAAIAAcAAABGAB4AAAAIAAcAAABGAB0AAAAIAAcAAABGABwAAAAIAAcAAABGABsAAAAIAAcAAABGABoAAAAIAAcAAABGABkAAAAIAAcAAABGABgAAAAIAAcAAABGABcAAAAIAAcAAABGABYAAAAIAAcAAABGABUAAAAIAAcAAABGABQAAAAIAAcAAABGABMAAAAIAAcAAABGABIAAAAIAAcAAABGABEAAAAIAAcAAABGABAAAAAIAAcAAABGAA8AAAAIAAcAAABGAA4AAAAIAAcAAABGAA0AAAAIAAcAAABGAAwAAAAIAAcAAABGAAsAAAAIAAcAAABGAAoAAAAIAAcAAABGAAkAAAAIAAcAAABGAAgAAAAIAAcAAABGAAcAAAAIAAcAAABGAAYAAAAIAAcAAABGAAUAAAAIAAcAAABGAAQAAAAIAAcAAABGAAMAAAAIAAcAAABGAAIAAAAIAAcAAABGAAEAAAAIAAcAAAAbAAAAAAAHAAYAAAAcAAAAAAAHAAYAAAAdAAAAAAAHAAYAAAAeAAAAAAAHAAYAAAAfAAAAAAAHAAYAAAAgAAAAAAAHAAYAAAAhAAAAAAAHAAYAAAAiAAAAAAAHAAYAAAAjAAAAAAAHAAYAAAAkAAAAAAAHAAYAAAAlAAAAAAAHAAYAAAAmAAAAAAAHAAYAAAAnAAAAAAAHAAYAAAAoAAAAAAAHAAYAAAApAAAAAAAHAAYAAAAqAAAAAAAHAAYAAAArAAAAAAAHAAYAAAAsAAAAAAAHAAYAAAAtAAAAAAAHAAYAAAAuAAAAAAAHAAYAAAAvAAAAAAAHAAYAAAAwAAAAAAAHAAYAAAAxAAAAAAAHAAYAAAAyAAAAAAAHAAYAAAAzAAAAAAAHAAYAAAA0AAAAAAAHAAYAAAA1AAAAAAAHAAYAAAA2AAAAAAAHAAYAAAA3AAAAAAAHAAYAAAA4AAAAAAAHAAYAAAA5AAAAAAAHAAYAAAA6AAAAAAAHAAYAAAA7AAAAAAAHAAYAAAA8AAAAAAAHAAYAAAA9AAAAAAAHAAYAAAA+AAAAAAAHAAYAAAA/AAAAAAAHAAYAAABAAAAAAAAHAAYAAABBAAAAAAAHAAYAAABCAAAAAAAHAAYAAABDAAAAAAAHAAYAAABEAAAAAAAHAAYAAABFAAAAAAAHAAYAAAA=")
tile_set = SubResource("TileSet_jqpx0")

[node name="Marble3" type="TileMapLayer" parent="."]
position = Vector2(0, 718)
tile_map_data = PackedByteArray("AAAAACYAAAAGAAcAAAAAACUAAAAGAAcAAAAAACQAAAAGAAcAAAAAACMAAAAGAAcAAAAAACIAAAAGAAcAAAAAACEAAAAGAAcAAAAAACAAAAAGAAcAAAAAAB8AAAAGAAcAAAAAAB4AAAAGAAcAAAAAAB0AAAAGAAcAAAAAABwAAAAGAAcAAAAAABsAAAAGAAcAAAAAABoAAAAGAAcAAAAAABkAAAAGAAcAAAAAABgAAAAGAAcAAAAAABcAAAAGAAcAAAAAABYAAAAGAAcAAAAAABUAAAAGAAcAAAAAABQAAAAGAAcAAAAAABMAAAAGAAcAAAAAABIAAAAGAAcAAAAAABEAAAAGAAcAAAAAABAAAAAGAAcAAAAAAA8AAAAGAAcAAAAAAA4AAAAGAAcAAAAAAA0AAAAGAAcAAAAAAAwAAAAGAAcAAAAAAAsAAAAGAAcAAAAAAAoAAAAGAAcAAAAAAAkAAAAGAAcAAAAAAAgAAAAGAAcAAAAAAAcAAAAGAAcAAAAAAAYAAAAGAAcAAAAAAAUAAAAGAAcAAAAAAAQAAAAGAAcAAAAAAAMAAAAGAAcAAAAAAAIAAAAGAAcAAAAAAAEAAAAGAAcAAAAAAAAAAAAGAAYAAAAAACcAAAAGAAgAAABGACcAAAAIAAgAAABFACcAAAAHAAgAAABEACcAAAAHAAgAAABDACcAAAAHAAgAAABCACcAAAAHAAgAAABBACcAAAAHAAgAAABAACcAAAAHAAgAAAA/ACcAAAAHAAgAAAA+ACcAAAAHAAgAAAA9ACcAAAAHAAgAAAA8ACcAAAAHAAgAAAA7ACcAAAAHAAgAAAA6ACcAAAAHAAgAAAA5ACcAAAAHAAgAAAA4ACcAAAAHAAgAAAA3ACcAAAAHAAgAAAA2ACcAAAAHAAgAAAA1ACcAAAAHAAgAAAA0ACcAAAAHAAgAAAAzACcAAAAHAAgAAAAyACcAAAAHAAgAAAAxACcAAAAHAAgAAAAwACcAAAAHAAgAAAAvACcAAAAHAAgAAAAuACcAAAAHAAgAAAAtACcAAAAHAAgAAAAsACcAAAAHAAgAAAArACcAAAAHAAgAAAAqACcAAAAHAAgAAAApACcAAAAHAAgAAAAoACcAAAAHAAgAAAAnACcAAAAHAAgAAAAmACcAAAAHAAgAAAAlACcAAAAHAAgAAAAkACcAAAAHAAgAAAAjACcAAAAHAAgAAAAiACcAAAAHAAgAAAAhACcAAAAHAAgAAAAgACcAAAAHAAgAAAAfACcAAAAHAAgAAAAeACcAAAAHAAgAAAAdACcAAAAHAAgAAAAcACcAAAAHAAgAAAAbACcAAAAHAAgAAAAaACcAAAAHAAgAAAAZACcAAAAHAAgAAAAYACcAAAAHAAgAAAAXACcAAAAHAAgAAAAWACcAAAAHAAgAAAAVACcAAAAHAAgAAAAUACcAAAAHAAgAAAATACcAAAAHAAgAAAASACcAAAAHAAgAAAARACcAAAAHAAgAAAAQACcAAAAHAAgAAAAPACcAAAAHAAgAAAAOACcAAAAHAAgAAAANACcAAAAHAAgAAAAMACcAAAAHAAgAAAALACcAAAAHAAgAAAAKACcAAAAHAAgAAAAJACcAAAAHAAgAAAAIACcAAAAHAAgAAAAHACcAAAAHAAgAAAAGACcAAAAHAAgAAAAFACcAAAAHAAgAAAAEACcAAAAHAAgAAAADACcAAAAHAAgAAAACACcAAAAHAAgAAAABACcAAAAHAAgAAABGACYAAAAIAAcAAABGACUAAAAIAAcAAABGACQAAAAIAAcAAABGACMAAAAIAAcAAABGACIAAAAIAAcAAABGACEAAAAIAAcAAABGACAAAAAIAAcAAABGAB8AAAAIAAcAAABGAB4AAAAIAAcAAABGAB0AAAAIAAcAAABGABwAAAAIAAcAAABGABsAAAAIAAcAAAABAAAAAAAHAAYAAAACAAAAAAAHAAYAAAADAAAAAAAHAAYAAAAEAAAAAAAHAAYAAAAFAAAAAAAHAAYAAAAGAAAAAAAHAAYAAAAHAAAAAAAHAAYAAAAIAAAAAAAHAAYAAAAJAAAAAAAHAAYAAAAKAAAAAAAHAAYAAAALAAAAAAAHAAYAAAAMAAAAAAAHAAYAAAANAAAAAAAHAAYAAAAOAAAAAAAHAAYAAAAPAAAAAAAHAAYAAAAQAAAAAAAHAAYAAAARAAAAAAAHAAYAAAASAAAAAAAHAAYAAAATAAAAAAAHAAYAAAAUAAAAAAAHAAYAAAAVAAAAAAAHAAYAAAAWAAAAAAAHAAYAAAAXAAAAAAAHAAYAAAAYAAAAAAAHAAYAAAAZAAAAAAAHAAYAAAAaAAAAAAAHAAYAAAAbAAAAAAAHAAYAAAAcAAAAAAAHAAYAAAAdAAAAAAAHAAYAAAAeAAAAAAAHAAYAAAAfAAAAAAAHAAYAAAAgAAAAAAAHAAYAAAAhAAAAAAAHAAYAAAAiAAAAAAAHAAYAAAAjAAAAAAAHAAYAAAAkAAAAAAAHAAYAAAAlAAAAAAAHAAYAAAAmAAAAAAAHAAYAAAAnAAAAAAAHAAYAAAAoAAAAAAAHAAYAAAApAAAAAAAHAAYAAAAqAAAAAAAHAAYAAAArAAAAAAAHAAYAAAA=")
tile_set = SubResource("TileSet_jqpx0")

[node name="Marble4" type="TileMapLayer" parent="."]
position = Vector2(1276, 0)
tile_map_data = PackedByteArray("AAAAAAwAAAAGAAcAAAAAAAsAAAAGAAcAAAAAAAoAAAAGAAcAAAAAAAkAAAAGAAcAAAAAAAgAAAAGAAcAAAAAAAcAAAAGAAcAAAAAAAYAAAAGAAcAAAAAAAUAAAAGAAcAAAAAAAQAAAAGAAcAAAAAAAMAAAAGAAcAAAAAAAIAAAAGAAcAAAAAAAEAAAAGAAcAAAAAAAAAAAAGAAYAAABGAAAAAAAIAAYAAABGACcAAAAIAAgAAABFACcAAAAHAAgAAABEACcAAAAHAAgAAABDACcAAAAHAAgAAABCACcAAAAHAAgAAABBACcAAAAHAAgAAABAACcAAAAHAAgAAAA/ACcAAAAHAAgAAAA+ACcAAAAHAAgAAAA9ACcAAAAHAAgAAAA8ACcAAAAHAAgAAAA7ACcAAAAHAAgAAAA6ACcAAAAHAAgAAAA5ACcAAAAHAAgAAAA4ACcAAAAHAAgAAAA3ACcAAAAHAAgAAAA2ACcAAAAHAAgAAAA1ACcAAAAHAAgAAAA0ACcAAAAHAAgAAAAzACcAAAAHAAgAAAAyACcAAAAHAAgAAAAxACcAAAAHAAgAAAAwACcAAAAHAAgAAAAvACcAAAAHAAgAAAAuACcAAAAHAAgAAAAtACcAAAAHAAgAAAAsACcAAAAHAAgAAAArACcAAAAHAAgAAAAqACcAAAAHAAgAAAApACcAAAAHAAgAAAAoACcAAAAHAAgAAAAnACcAAAAHAAgAAAAmACcAAAAHAAgAAAAlACcAAAAHAAgAAAAkACcAAAAHAAgAAAAjACcAAAAHAAgAAAAiACcAAAAHAAgAAAAhACcAAAAHAAgAAAAgACcAAAAHAAgAAAAfACcAAAAHAAgAAAAeACcAAAAHAAgAAAAdACcAAAAHAAgAAAAcACcAAAAHAAgAAAAbACcAAAAHAAgAAABGACYAAAAIAAcAAABGACUAAAAIAAcAAABGACQAAAAIAAcAAABGACMAAAAIAAcAAABGACIAAAAIAAcAAABGACEAAAAIAAcAAABGACAAAAAIAAcAAABGAB8AAAAIAAcAAABGAB4AAAAIAAcAAABGAB0AAAAIAAcAAABGABwAAAAIAAcAAABGABsAAAAIAAcAAABGABoAAAAIAAcAAABGABkAAAAIAAcAAABGABgAAAAIAAcAAABGABcAAAAIAAcAAABGABYAAAAIAAcAAABGABUAAAAIAAcAAABGABQAAAAIAAcAAABGABMAAAAIAAcAAABGABIAAAAIAAcAAABGABEAAAAIAAcAAABGABAAAAAIAAcAAABGAA8AAAAIAAcAAABGAA4AAAAIAAcAAABGAA0AAAAIAAcAAABGAAwAAAAIAAcAAABGAAsAAAAIAAcAAABGAAoAAAAIAAcAAABGAAkAAAAIAAcAAABGAAgAAAAIAAcAAABGAAcAAAAIAAcAAABGAAYAAAAIAAcAAABGAAUAAAAIAAcAAABGAAQAAAAIAAcAAABGAAMAAAAIAAcAAABGAAIAAAAIAAcAAABGAAEAAAAIAAcAAAABAAAAAAAHAAYAAAACAAAAAAAHAAYAAAADAAAAAAAHAAYAAAAEAAAAAAAHAAYAAAAFAAAAAAAHAAYAAAAGAAAAAAAHAAYAAAAHAAAAAAAHAAYAAAAIAAAAAAAHAAYAAAAJAAAAAAAHAAYAAAAKAAAAAAAHAAYAAAALAAAAAAAHAAYAAAAMAAAAAAAHAAYAAAANAAAAAAAHAAYAAAAOAAAAAAAHAAYAAAAPAAAAAAAHAAYAAAAQAAAAAAAHAAYAAAARAAAAAAAHAAYAAAASAAAAAAAHAAYAAAATAAAAAAAHAAYAAAAUAAAAAAAHAAYAAAAVAAAAAAAHAAYAAAAWAAAAAAAHAAYAAAAXAAAAAAAHAAYAAAAYAAAAAAAHAAYAAAAZAAAAAAAHAAYAAAAaAAAAAAAHAAYAAAAbAAAAAAAHAAYAAAAcAAAAAAAHAAYAAAAdAAAAAAAHAAYAAAAeAAAAAAAHAAYAAAAfAAAAAAAHAAYAAAAgAAAAAAAHAAYAAAAhAAAAAAAHAAYAAAAiAAAAAAAHAAYAAAAjAAAAAAAHAAYAAAAkAAAAAAAHAAYAAAAlAAAAAAAHAAYAAAAmAAAAAAAHAAYAAAAnAAAAAAAHAAYAAAAoAAAAAAAHAAYAAAApAAAAAAAHAAYAAAAqAAAAAAAHAAYAAAArAAAAAAAHAAYAAAAsAAAAAAAHAAYAAAAtAAAAAAAHAAYAAAAuAAAAAAAHAAYAAAAvAAAAAAAHAAYAAAAwAAAAAAAHAAYAAAAxAAAAAAAHAAYAAAAyAAAAAAAHAAYAAAAzAAAAAAAHAAYAAAA0AAAAAAAHAAYAAAA1AAAAAAAHAAYAAAA2AAAAAAAHAAYAAAA3AAAAAAAHAAYAAAA4AAAAAAAHAAYAAAA5AAAAAAAHAAYAAAA6AAAAAAAHAAYAAAA7AAAAAAAHAAYAAAA8AAAAAAAHAAYAAAA9AAAAAAAHAAYAAAA+AAAAAAAHAAYAAAA/AAAAAAAHAAYAAABAAAAAAAAHAAYAAABBAAAAAAAHAAYAAABCAAAAAAAHAAYAAABDAAAAAAAHAAYAAABEAAAAAAAHAAYAAABFAAAAAAAHAAYAAAA=")
tile_set = SubResource("TileSet_jqpx0")

[node name="PortalBoss" parent="." instance=ExtResource("1_h1cn2")]
position = Vector2(1278, 721)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="WhiteFade" type="ColorRect" parent="CanvasLayer"]
z_index = 20
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
